Mon Oct 24 08:10:29 2005  Venkita Subramonian  <venkita@cs.wustl.edu>

	* DAnCE/NodeApplication/NodeApplication_Impl.{h,inl,cpp}: 
	* DAnCE/NodeApplication/Container_Impl.{h,inl,cpp}: 
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.{cpp,inl,h}:
	* DAnCE/NodeManager/NodeManager_Impl.{cpp,h}: 
	* DAnCE/NodeApplicationManager/NodeApplicationManager.mpc: 
	* DAnCE/NodeManager/NodeManager.mpc: 
	* DAnCE/StaticConfigurator/README: 	
	* DAnCE/StaticConfigurator/StaticDAnCEParser.{cpp,mpc}: 	
	* DAnCE/StaticConfigurator/StaticDAnCEApp.{cpp.tmpl,mpc.tmpl}: 	
	* docs/static_dance.html: 
	* docs/imgs/dance_arch.{vsd,jpg}: 
	* docs/imgs/static_dance_arch.{vsd,jpg}: 
	* docs/imgs/static_dance_impl.{vsd,jpg}: 

	Added Static D&C capability to CIAO. See
	  $CIAO_ROOT/docs/static_dance.html for further details.
	
Fri Oct 21 13:58:13 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* tools/Config_Handlers/DynAny_Handler.mpc

	Modified to make this not build on systems built with minimum
	corba.  

Fri Oct 21 09:56:10 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/RTNodeApplication/RTNodeApplication.mpc:  Removed the MPC
	  file to prevent it from being built.

	* DAnCE/RTNodeApplication/REAME: Stated the directory has been
	  depricated. 

Fri Oct 21 13:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeApplicationManager/Containers_Info_Map.cpp:
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
          Fixed unitialized warnings

Fri Oct 21 10:04:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Old_Config_Handlers/Process_Element_T.cpp:
          Fixed 64bit warnings

Thu Oct 20 09:07:21 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplication/NodeApp_Configurator.{h,cpp}:
	  Actually, destructors can be pure virtual.  They just can't be
	  defined in header files.

Thu Oct 20 09:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
