@@ -107,8 +107,37 @@ NodeManagers and NodeApplications) that are involved.
 </p>
 <p><br>
 </p>
-<p><b>Figure 2.</b> <b>Static D&amp;C in DAnCE</b></p>
-<p><br>Figure 2 shows the static configuration approach in DAnCE. Here,
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br>
+</p>
+<p><br><b>Figure 2.</b> <b>Static D&amp;C in DAnCE</b></p>
+<p>Figure 2 shows the static configuration approach in DAnCE. Here,
 the flattened deployment plan (.cdp) is parsed offline by an offline
 parser ($CIAO_ROOT/StaticConfigurator/StaticDAnCEParser) using the
 same XML parser classes that the dynamic configuration uses. The
