@@ -1,3 +1,9 @@
+Mon Oct 24 09:36:28 2005  Venkita Subramonian  <venkita@cs.wustl.edu>
+
+	* docs/static_dance.html: 
+
+	Corrected minor error with display of figures.
+
 Mon Oct 24 08:10:29 2005  Venkita Subramonian  <venkita@cs.wustl.edu>
 
 	* DAnCE/NodeApplication/NodeApplication_Impl.{h,inl,cpp}: 
